[tool.poetry]
name = "rostelecom"
version = "0.1.0"
description = ""
authors = ["user <sheldd49@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pytelegrambotapi = "^4.17.0"
aiogram = "^3.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
